--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1376,12 +1376,12 @@ body {
 }
 .cid-r54kJgaxQK .navbar {
   padding: .5rem 0;
-  background: #999696;
+  background: #232323;
   transition: none;
   min-height: 77px;
 }
 .cid-r54kJgaxQK .navbar-dropdown.bg-color.transparent.opened {
-  background: #999696;
+  background: #232323;
 }
 .cid-r54kJgaxQK a {
   font-style: normal;
@@ -1469,7 +1469,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r54kJgaxQK .dropdown .dropdown-menu {
-  background: #999696;
+  background: #232323;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1773,12 +1773,12 @@ body {
 }
 .cid-r53t1kGedp .navbar {
   padding: .5rem 0;
-  background: #999696;
+  background: #232323;
   transition: none;
   min-height: 77px;
 }
 .cid-r53t1kGedp .navbar-dropdown.bg-color.transparent.opened {
-  background: #999696;
+  background: #232323;
 }
 .cid-r53t1kGedp a {
   font-style: normal;
@@ -1862,7 +1862,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r53t1kGedp .dropdown .dropdown-menu {
-  background: #999696;
+  background: #232323;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2676,7 +2676,7 @@ body {
 .cid-r5aYecmYRP {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-color: #b2ccd2;
 }
 .cid-r5aYecmYRP .title {
   margin-bottom: 2rem;
